--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 CC      = gcc
-CFLAGS  = -Wall -g -D_POSIX_SOURCE -D_BSD_SOURCE -std=c99 -Werror -pedantic
+CFLAGS  = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -D_BSD_SOURCE -std=c99 -Werror -pedantic
 
 .SUFFIXES: .c .o
 
@@ -8,9 +8,9 @@ CFLAGS  = -Wall -g -D_POSIX_SOURCE -D_BSD_SOURCE -std=c99 -Werror -pedantic
 all: assemble emulate
 
 assemble: assemble.o
-
+	gcc assemble.o -o assemble
 emulate: emulate.o
-
+	gcc emulate.c -o emulate
 clean:
 	rm -f $(wildcard *.o)
 	rm -f assemble
