Reverted Makefile to prev commit to compile assembler code as well

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,16 +2,16 @@ CC      = gcc
 CFLAGS  = -Wall -O3 -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -D_BSD_SOURCE -std=c99 -pedantic
 
 EMULATOR_SOURCE = emulator/utilities.c emulator/cpu_state.c emulator/pipeline_executor.c emulator/multiply_instr.c emulator/branch_instr.c emulator/data_proc_instr.c emulator/single_data_transfer_instr.c emulator/barrel_shifter.c
-# ASSEMBLER_SOURCE = assembler/asm_utilities.c assembler/hash_table.c assembler/file_io.c assembler/parser.c assembler/asm_multiply_instr.c assembler/asm_branch_instr.c
+ASSEMBLER_SOURCE = assembler/asm_utilities.c assembler/hash_table.c assembler/file_io.c assembler/parser.c assembler/asm_multiply_instr.c assembler/asm_branch_instr.c
 
 .SUFFIXES: .c .o
 
 .PHONY: all clean
 
-all: emulate #assemble
+all: emulate assemble # uncomment for part 2
 
-# assemble: assemble.o
-# 	$(CC) $(CFLAGS) assemble.c $(ASSEMBLER_SOURCE) -o $@
+assemble: assemble.o
+	$(CC) $(CFLAGS) assemble.c $(ASSEMBLER_SOURCE) -o $@
 
 emulate: emulate.o
 	$(CC) $(CFLAGS) emulate.c $(EMULATOR_SOURCE) -o $@
