Improved GUI code structure: more modular, uses structs for windows

--- a/extension/Makefile
+++ b/extension/Makefile
@@ -1,8 +1,8 @@
 CC = gcc
-CFLAGS = -Wall -pedantic -std=c99
+CFLAGS = -Wall -pedantic -std=c99 -g
 LDFLAGS = -lcurses
 
-SOURCE_FILES = 
+SOURCE_FILES = gui.c
 
 .PHONY = clean
 
