Finished merging the extension frontend/backend, adapted Makefiles and no memory leaks

--- a/extension/Makefile
+++ b/extension/Makefile
@@ -2,7 +2,7 @@ CC = gcc
 CFLAGS = -Wall -pedantic -std=c99 -g
 LDFLAGS = -lcurses
 
-SOURCE_FILES = gui.c str_list.c ../src/emulator/utilities.c ../src/emulator/cpu_state.c ../src/emulator/pipeline_executor.c ../src/emulator/multiply_instr.c ../src/emulator/branch_instr.c ../src/emulator/data_proc_instr.c ../src/emulator/single_data_transfer_instr.c ../src/emulator/barrel_shifter.c command_parser.c extension_utilities.c ../src/assembler/hash_table.c
+SOURCE_FILES = gui.c str_list.c command_parser.c ../src/emulator/utilities.c ../src/emulator/cpu_state.c ../src/emulator/pipeline_executor.c ../src/emulator/multiply_instr.c ../src/emulator/branch_instr.c ../src/emulator/data_proc_instr.c ../src/emulator/single_data_transfer_instr.c ../src/emulator/barrel_shifter.c ../src/assembler/hash_table.c
 
 .PHONY = clean
 
