Added final report latex code and pdf, and some more final refactoring

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 CC      = gcc
-CFLAGS  = -Wall -O3 -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -D_BSD_SOURCE -std=c99 -pedantic
+CFLAGS  = -Wall -Werror -O3 -D_POSIX_SOURCE -D_DEFAULT_SOURCE -D_BSD_SOURCE -std=c99 -pedantic
 
 EXTENSION_EMULATOR_SOURCE = ../extension/command_parser.c ../extension/gui.c ../extension/str_list.c
 EMULATOR_SOURCE = emulator/utilities.c emulator/cpu_state.c emulator/pipeline_executor.c emulator/multiply_instr.c emulator/branch_instr.c emulator/data_proc_instr.c emulator/single_data_transfer_instr.c emulator/barrel_shifter.c assembler/hash_table.c
