--- a/extension/Makefile
+++ b/extension/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -Wall -pedantic -std=c99 -g
+CFLAGS = -Wall -Werror -O3 -D_POSIX_SOURCE -D_DEFAULT_SOURCE -D_BSD_SOURCE -std=c99 -pedantic
 LDFLAGS = -lcurses
 
 SOURCE_FILES = gui.c str_list.c command_parser.c ../src/emulator/utilities.c ../src/emulator/cpu_state.c ../src/emulator/pipeline_executor.c ../src/emulator/multiply_instr.c ../src/emulator/branch_instr.c ../src/emulator/data_proc_instr.c ../src/emulator/single_data_transfer_instr.c ../src/emulator/barrel_shifter.c ../src/assembler/hash_table.c
